--- a/smack-app/Base.lproj/Main.storyboard
+++ b/smack-app/Base.lproj/Main.storyboard
@@ -33,16 +33,68 @@
         <scene sceneID="xUv-jA-mwy">
             <objects>
                 <viewController id="LYi-mm-ED7" customClass="ChannelVC" customModule="smack_app" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="ep3-z0-qMe">
+                    <view key="view" contentMode="scaleToFill" id="ep3-z0-qMe" customClass="GradientView" customModule="smack_app" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Smack" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Acw-Db-Omq">
+                                <rect key="frame" x="20" y="44" width="79" height="29"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="24"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="CHANNELS" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jdM-5d-DE1">
+                                <rect key="frame" x="20" y="93" width="65" height="14"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="12"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1yL-gj-DwQ">
+                                <rect key="frame" x="281" y="89" width="22" height="22"/>
+                                <state key="normal" image="addChannelButton"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hTf-Gr-cPy">
+                                <rect key="frame" x="115" y="593" width="46" height="33"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="17"/>
+                                <state key="normal" title="Login">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                            </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="menuProfileIcon" translatesAutoresizingMaskIntoConstraints="NO" id="z1g-QX-asl">
+                                <rect key="frame" x="20" y="572" width="75" height="75"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="75" id="U4h-77-BZP"/>
+                                    <constraint firstAttribute="width" constant="75" id="bGR-lb-1yE"/>
+                                </constraints>
+                            </imageView>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="J9a-yV-CjA">
+                                <rect key="frame" x="0.0" y="131" width="375" height="421"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="hTf-Gr-cPy" firstAttribute="centerY" secondItem="z1g-QX-asl" secondAttribute="centerY" id="04a-Oa-IVV"/>
+                            <constraint firstItem="1yL-gj-DwQ" firstAttribute="centerY" secondItem="jdM-5d-DE1" secondAttribute="centerY" id="0y8-sK-k98"/>
+                            <constraint firstItem="jdM-5d-DE1" firstAttribute="leading" secondItem="Ogx-j7-pSv" secondAttribute="leading" constant="20" id="BXb-E7-OTZ"/>
+                            <constraint firstItem="J9a-yV-CjA" firstAttribute="leading" secondItem="Ogx-j7-pSv" secondAttribute="leading" id="GQW-6b-nMk"/>
+                            <constraint firstItem="z1g-QX-asl" firstAttribute="top" secondItem="J9a-yV-CjA" secondAttribute="bottom" constant="20" id="K0g-yj-RpP"/>
+                            <constraint firstItem="Acw-Db-Omq" firstAttribute="top" secondItem="Ogx-j7-pSv" secondAttribute="top" constant="24" id="Pal-gC-sCL"/>
+                            <constraint firstItem="Ogx-j7-pSv" firstAttribute="bottom" secondItem="z1g-QX-asl" secondAttribute="bottom" constant="20" id="TXU-WC-ABk"/>
+                            <constraint firstItem="J9a-yV-CjA" firstAttribute="top" secondItem="1yL-gj-DwQ" secondAttribute="bottom" constant="20" id="UgE-6t-86z"/>
+                            <constraint firstItem="Ogx-j7-pSv" firstAttribute="trailing" secondItem="1yL-gj-DwQ" secondAttribute="trailing" constant="72" id="aE6-Ne-Gsp"/>
+                            <constraint firstItem="Acw-Db-Omq" firstAttribute="leading" secondItem="Ogx-j7-pSv" secondAttribute="leading" constant="20" id="anr-Kh-m4E"/>
+                            <constraint firstItem="z1g-QX-asl" firstAttribute="leading" secondItem="Ogx-j7-pSv" secondAttribute="leading" constant="20" id="fVU-rL-lgy"/>
+                            <constraint firstItem="hTf-Gr-cPy" firstAttribute="leading" secondItem="z1g-QX-asl" secondAttribute="trailing" constant="20" id="hDF-rC-bYR"/>
+                            <constraint firstItem="jdM-5d-DE1" firstAttribute="top" secondItem="Acw-Db-Omq" secondAttribute="bottom" constant="20" id="iXg-Mc-vEp"/>
+                            <constraint firstItem="J9a-yV-CjA" firstAttribute="trailing" secondItem="Ogx-j7-pSv" secondAttribute="trailing" id="uI9-D0-Kp0"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="Ogx-j7-pSv"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jPu-3n-NWQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="942" y="-236"/>
+            <point key="canvasLocation" x="941.60000000000002" y="-236.13193403298354"/>
         </scene>
         <!--ChatVC-->
         <scene sceneID="ou3-VW-ZZ6">
@@ -52,7 +104,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="b9Y-IG-9vY">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="b9Y-IG-9vY" customClass="GradientView" customModule="smack_app" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="20" width="375" height="77"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cd8-he-2nr">
@@ -70,7 +122,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
-                                <color key="backgroundColor" red="0.29019607843137252" green="0.30196078431372547" blue="0.84705882352941175" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstItem="3gk-vo-kur" firstAttribute="centerY" secondItem="cd8-he-2nr" secondAttribute="centerY" id="4KS-Qc-LfL"/>
                                     <constraint firstAttribute="height" constant="77" id="Rai-Jm-7Dl"/>
@@ -98,6 +150,8 @@
         </scene>
     </scenes>
     <resources>
+        <image name="addChannelButton" width="22" height="22"/>
+        <image name="menuProfileIcon" width="99" height="99"/>
         <image name="smackBurger" width="40" height="40"/>
     </resources>
 </document>
