--- a/smack-app/Base.lproj/Main.storyboard
+++ b/smack-app/Base.lproj/Main.storyboard
@@ -64,7 +64,7 @@
                                     <action selector="loginButtonPressed:" destination="LYi-mm-ED7" eventType="touchUpInside" id="dKi-Pm-aKf"/>
                                 </connections>
                             </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="menuProfileIcon" translatesAutoresizingMaskIntoConstraints="NO" id="z1g-QX-asl">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="menuProfileIcon" translatesAutoresizingMaskIntoConstraints="NO" id="z1g-QX-asl" customClass="CircleImage" customModule="smack_app" customModuleProvider="target">
                                 <rect key="frame" x="20" y="572" width="75" height="75"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="75" id="U4h-77-BZP"/>
@@ -363,7 +363,7 @@
                                     </view>
                                 </subviews>
                             </stackView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profileDefault" translatesAutoresizingMaskIntoConstraints="NO" id="dB9-0J-JbZ">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profileDefault" translatesAutoresizingMaskIntoConstraints="NO" id="dB9-0J-JbZ" customClass="CircleImage" customModule="smack_app" customModuleProvider="target">
                                 <rect key="frame" x="137.5" y="299" width="100" height="100"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="100" id="0AW-zy-KEJ"/>
@@ -390,6 +390,10 @@
                                     <action selector="generateBGColorButtonPressed:" destination="eXl-oN-Fme" eventType="touchUpInside" id="Chc-ox-HeQ"/>
                                 </connections>
                             </button>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="white" translatesAutoresizingMaskIntoConstraints="NO" id="zDy-3s-aQ3">
+                                <rect key="frame" x="177.5" y="223.5" width="20" height="20"/>
+                                <color key="color" red="0.25882352939999997" green="0.3294117647" blue="0.72549019609999998" alpha="1" colorSpace="calibratedRGB"/>
+                            </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
@@ -403,8 +407,10 @@
                             <constraint firstItem="dB9-0J-JbZ" firstAttribute="centerX" secondItem="FG0-v0-eZn" secondAttribute="centerX" id="HGl-uW-QmT"/>
                             <constraint firstItem="aHJ-AM-Yol" firstAttribute="bottom" secondItem="b61-bN-k3g" secondAttribute="bottom" constant="20" id="IG1-EE-MjP"/>
                             <constraint firstItem="a9i-pi-gkw" firstAttribute="width" secondItem="dB9-0J-JbZ" secondAttribute="width" id="M3p-tk-nEY"/>
+                            <constraint firstItem="zDy-3s-aQ3" firstAttribute="centerY" secondItem="FG0-v0-eZn" secondAttribute="centerY" constant="-100" id="hU6-aN-gBg"/>
                             <constraint firstItem="b61-bN-k3g" firstAttribute="centerX" secondItem="FG0-v0-eZn" secondAttribute="centerX" id="jbL-wX-IM8"/>
                             <constraint firstItem="8Zx-Yy-KbJ" firstAttribute="centerX" secondItem="FG0-v0-eZn" secondAttribute="centerX" id="pJ2-Of-zCV"/>
+                            <constraint firstItem="zDy-3s-aQ3" firstAttribute="centerX" secondItem="FG0-v0-eZn" secondAttribute="centerX" id="vEN-iX-Cqj"/>
                             <constraint firstItem="RUd-zA-vRS" firstAttribute="top" secondItem="aHJ-AM-Yol" secondAttribute="top" constant="40" id="y5E-am-uCR"/>
                             <constraint firstItem="5XF-oi-ZKy" firstAttribute="centerX" secondItem="FG0-v0-eZn" secondAttribute="centerX" id="yj7-Al-Ljz"/>
                             <constraint firstItem="a9i-pi-gkw" firstAttribute="top" secondItem="dB9-0J-JbZ" secondAttribute="top" id="zFw-EO-8Fw"/>
@@ -414,6 +420,7 @@
                     <connections>
                         <outlet property="emailText" destination="nfv-no-kwb" id="aLN-o5-ihf"/>
                         <outlet property="passwordText" destination="tkk-Si-vbr" id="oZ9-Ja-WR9"/>
+                        <outlet property="spinner" destination="zDy-3s-aQ3" id="cMY-Am-9Bs"/>
                         <outlet property="userImage" destination="dB9-0J-JbZ" id="mTo-Xw-rBs"/>
                         <outlet property="usernameText" destination="FH6-BI-y8h" id="zD1-Fa-UuP"/>
                         <segue destination="nKn-J3-VaR" kind="unwind" identifier="unwindToChannel" unwindAction="prepareForUnwindWithSegue:" id="ioD-jU-y8z"/>
@@ -475,7 +482,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="120" height="120"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dark0" translatesAutoresizingMaskIntoConstraints="NO" id="f9E-3S-YfM">
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dark0" translatesAutoresizingMaskIntoConstraints="NO" id="f9E-3S-YfM" customClass="CircleImage" customModule="smack_app" customModuleProvider="target">
                                                     <rect key="frame" x="10" y="10" width="100" height="100"/>
                                                 </imageView>
                                             </subviews>
