--- a/smack-app/XIBs/ProfileVC.xib
+++ b/smack-app/XIBs/ProfileVC.xib
@@ -10,14 +10,107 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ProfileVC" customModule="smack_app" customModuleProvider="target">
+            <connections>
+                <outlet property="bgView" destination="lTA-Cf-yOw" id="ZJp-l1-FmB"/>
+                <outlet property="profileImage" destination="EcI-Ll-jg1" id="xBQ-qg-dbB"/>
+                <outlet property="userEmailLabel" destination="v2d-bV-z3o" id="zOT-mK-dlj"/>
+                <outlet property="userNameLabel" destination="FFa-Mk-c31" id="Gg8-AT-wO8"/>
+                <outlet property="view" destination="ypI-D3-f2O" id="r86-Ve-2nd"/>
+            </connections>
+        </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="ypI-D3-f2O">
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+            <subviews>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lTA-Cf-yOw" userLabel="BG">
+                    <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                    <color key="backgroundColor" white="0.32000000000000001" alpha="0.40000000000000002" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                </view>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FQk-Gk-5hs">
+                    <rect key="frame" x="20" y="173.5" width="335" height="320"/>
+                    <subviews>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="flk-FV-tW2">
+                            <rect key="frame" x="299" y="8" width="28" height="28"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="28" id="33C-gf-ju6"/>
+                                <constraint firstAttribute="height" constant="28" id="V2d-OC-1qK"/>
+                            </constraints>
+                            <state key="normal" image="closeButton"/>
+                            <connections>
+                                <action selector="closeButtonPressed:" destination="-1" eventType="touchUpInside" id="j2A-BO-cBQ"/>
+                            </connections>
+                        </button>
+                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="14" translatesAutoresizingMaskIntoConstraints="NO" id="Nwe-U8-L3a">
+                            <rect key="frame" x="102" y="35" width="131.5" height="210.5"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Your Profile" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eNx-Rp-Gam">
+                                    <rect key="frame" x="2.5" y="0.0" width="127" height="27.5"/>
+                                    <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="23"/>
+                                    <color key="textColor" red="0.25882352939999997" green="0.3294117647" blue="0.72549019609999998" alpha="1" colorSpace="calibratedRGB"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profileDefault" translatesAutoresizingMaskIntoConstraints="NO" id="EcI-Ll-jg1" customClass="CircleImage" customModule="smack_app" customModuleProvider="target">
+                                    <rect key="frame" x="16" y="41.5" width="100" height="100"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="100" id="Leh-O2-4pn"/>
+                                        <constraint firstAttribute="width" constant="100" id="cOW-NS-Mkh"/>
+                                    </constraints>
+                                </imageView>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FFa-Mk-c31">
+                                    <rect key="frame" x="43" y="155.5" width="46" height="20.5"/>
+                                    <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="17"/>
+                                    <color key="textColor" red="0.25882352939999997" green="0.3294117647" blue="0.72549019609999998" alpha="1" colorSpace="calibratedRGB"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="User@email.com" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v2d-bV-z3o">
+                                    <rect key="frame" x="0.0" y="190" width="131.5" height="20.5"/>
+                                    <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="17"/>
+                                    <color key="textColor" red="0.25882352939999997" green="0.3294117647" blue="0.72549019609999998" alpha="1" colorSpace="calibratedRGB"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                            </subviews>
+                        </stackView>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="paR-wu-yXs">
+                            <rect key="frame" x="141" y="280" width="53" height="32"/>
+                            <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="16"/>
+                            <state key="normal" title="Logout">
+                                <color key="titleColor" red="0.25882352939999997" green="0.3294117647" blue="0.72549019609999998" alpha="1" colorSpace="calibratedRGB"/>
+                            </state>
+                            <connections>
+                                <action selector="logoutButtonPressed:" destination="-1" eventType="touchUpInside" id="ETL-9U-r4I"/>
+                            </connections>
+                        </button>
+                    </subviews>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <constraints>
+                        <constraint firstAttribute="trailing" secondItem="flk-FV-tW2" secondAttribute="trailing" constant="8" id="534-ir-Kwo"/>
+                        <constraint firstAttribute="bottom" secondItem="paR-wu-yXs" secondAttribute="bottom" constant="8" id="7Py-Df-Bvg"/>
+                        <constraint firstItem="Nwe-U8-L3a" firstAttribute="centerY" secondItem="FQk-Gk-5hs" secondAttribute="centerY" constant="-20" id="Jc7-gS-nGc"/>
+                        <constraint firstItem="flk-FV-tW2" firstAttribute="top" secondItem="FQk-Gk-5hs" secondAttribute="top" constant="8" id="L5p-Ip-bea"/>
+                        <constraint firstItem="Nwe-U8-L3a" firstAttribute="centerX" secondItem="FQk-Gk-5hs" secondAttribute="centerX" id="PDS-vG-Jw5"/>
+                        <constraint firstItem="paR-wu-yXs" firstAttribute="centerX" secondItem="FQk-Gk-5hs" secondAttribute="centerX" id="wDS-97-gAY"/>
+                        <constraint firstAttribute="height" constant="320" id="x9I-uD-682"/>
+                    </constraints>
+                </view>
+            </subviews>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+            <constraints>
+                <constraint firstItem="FQk-Gk-5hs" firstAttribute="centerY" secondItem="ypI-D3-f2O" secondAttribute="centerY" id="9c2-Hk-ToL"/>
+                <constraint firstItem="56o-gr-pWR" firstAttribute="bottom" secondItem="lTA-Cf-yOw" secondAttribute="bottom" id="EAx-wR-bYa"/>
+                <constraint firstItem="FQk-Gk-5hs" firstAttribute="leading" secondItem="56o-gr-pWR" secondAttribute="leading" constant="20" id="GqM-R3-bQI"/>
+                <constraint firstItem="56o-gr-pWR" firstAttribute="trailing" secondItem="FQk-Gk-5hs" secondAttribute="trailing" constant="20" id="WmN-AW-vno"/>
+                <constraint firstItem="lTA-Cf-yOw" firstAttribute="leading" secondItem="56o-gr-pWR" secondAttribute="leading" id="f1M-dt-2V3"/>
+                <constraint firstItem="56o-gr-pWR" firstAttribute="trailing" secondItem="lTA-Cf-yOw" secondAttribute="trailing" id="sac-6j-8ep"/>
+                <constraint firstItem="lTA-Cf-yOw" firstAttribute="top" secondItem="56o-gr-pWR" secondAttribute="top" id="yOM-6p-2uh"/>
+            </constraints>
             <viewLayoutGuide key="safeArea" id="56o-gr-pWR"/>
-            <point key="canvasLocation" x="105" y="123"/>
+            <point key="canvasLocation" x="104.5" y="122.5"/>
         </view>
     </objects>
+    <resources>
+        <image name="closeButton" width="28" height="28"/>
+        <image name="profileDefault" width="192" height="192"/>
+    </resources>
 </document>
